--- a/style.css
+++ b/style.css
@@ -132,3 +132,19 @@ button:disabled {
     gap: 15px; /* Espaçamento entre os botões */
     margin-top: 30px;
 }
+
+.eliminado {
+    position: relative;
+    opacity: 0.5;
+    pointer-events: none;
+}
+
+.eliminado::after {
+    content: "❌";
+    position: absolute;
+    font-size: 40px;
+    color: red;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
